<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollViewExplore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:showDividers="middle">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewExploreSearch"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="8dp"
                android:transitionName="transition_name"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageViewExploreSearchIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/search_icon"
                        app:tint="@color/searchTintColor" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewExploreSearch"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/lato_light"
                        android:gravity="center_vertical"
                        android:text="@string/search_product"
                        android:textColor="@color/searchTintColor"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textViewExploreSearchBarcodeIcon"
                        app:layout_constraintStart_toEndOf="@+id/imageViewExploreSearchIcon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/textViewExploreSearchBarcodeIcon"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:padding="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/qr_code"
                        app:tint="@color/searchTintColor" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/ExplorePageSectionTitle"
                android:text="@string/explore_campaigns" />

            <FrameLayout
                android:id="@+id/frameLayoutExploreCampaigns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewExploreAdvise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/explore_advised_for_you"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

<!--                <androidx.appcompat.widget.AppCompatTextView-->
<!--                    android:id="@+id/textViewExploreAdviseSeeAll"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginEnd="8dp"-->
<!--                    android:fontFamily="@font/lato_light"-->
<!--                    android:text="@string/explore_see_all"-->
<!--                    android:textColor="@color/colorPrimary"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="@+id/textViewExploreAdvise"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->
            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:id="@+id/frameLayoutExploreAdvisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="transition_1_name" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewExploreTryWithAr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/explore_try_with_ar"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

<!--                <androidx.appcompat.widget.AppCompatTextView-->
<!--                    android:id="@+id/textViewExploreArItemsSeeAll"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginEnd="8dp"-->
<!--                    android:fontFamily="@font/lato_light"-->
<!--                    android:text="@string/explore_see_all"-->
<!--                    android:textColor="@color/colorPrimary"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="@+id/textViewExploreTryWithAr"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->
            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:id="@+id/frameLayoutExploreTryWithAr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewExploreBrands"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/explore_brands"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

<!--                <androidx.appcompat.widget.AppCompatTextView-->
<!--                    android:id="@+id/textViewExploreBrandsSeeAll"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginEnd="8dp"-->
<!--                    android:fontFamily="@font/lato_light"-->
<!--                    android:text="@string/explore_see_all"-->
<!--                    android:textColor="@color/colorPrimary"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="@+id/textViewExploreBrands"-->
<!--                    app:layout_constraintTop_toTopOf="@+id/textViewExploreBrands" />-->

            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:id="@+id/frameLayoutExploreBrands"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/ExplorePageSectionTitle"
                android:text="@string/explore_last_visited_products" />

            <FrameLayout
                android:id="@+id/frameLayoutExploreLastVisitedProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/ExplorePageSectionTitle"
                android:text="@string/explore_discounted_products" />

            <FrameLayout
                android:id="@+id/frameLayoutExploreDiscountProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>